// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render checked 1`] = `
<body>
  <div>
    <div>
      <svg
        fill="none"
        height="20"
        viewBox="0 0 26 27"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="13"
          cy="13.5005"
          fill="white"
          r="9.76316"
          stroke="#0F265C"
        />
        <circle
          cx="12.9999"
          cy="13.5004"
          fill="#0F265C"
          r="4.78947"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`<Radio /> should render unchecked 1`] = `
<body>
  <div>
    <div>
      <svg
        fill="none"
        height="20"
        viewBox="0 0 26 27"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="13"
          cy="13.5005"
          fill="white"
          r="9.76316"
          stroke="#B7B7B9"
        />
      </svg>
    </div>
  </div>
</body>
`;
